# Advanced-Object-Oriented-Programming

./: README.md  Research.md
src/: Bishop.cpp  Bishop.h  Board.cpp  Board.h  BoundaryValidator.cpp  BoundaryValidator.h  CMakeLists.txt  ColorValidator.cpp  ColorValidator.h  Figure.cpp  Figure.h  GeometricValidator.cpp  GeometricValidator.h  HandleKIngAttack.cpp  HandleKIngAttack.h  HandleValidationState.cpp  HandleValidationState.h  King.cpp  King.h  Knight.cpp  Knight.h  Move.cpp  Move.h  OrderValidator.cpp  OrderValidator.h  Pawn.cpp  Pawn.h  Point.cpp  Point.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h  Square.cpp  Square.h  StateChecker.cpp  StateChecker.h  Validator.cpp  Validator.h
